test/libhyperion/syntaxTests/immutable/selector_function_pointer.hyp
contract C {
    uint immutable x;
    constructor() {
        x = 3;
        readX().selector;
    }

    function f() external view returns(uint)  {
        return x;
    }

    function readX() public view returns(function() external view returns(uint) _f) {
        _f = this.f;
    }
}
// ----
// TypeError 4888: (217-258): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
